# TemplateMatchWithGUI

./: CMakeLists.txt  DrawingWidget.cpp  DrawingWidget.h  ImageDisplayWidget.cpp  ImageDisplayWidget.h  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/: Qt.cmake  vitip.cmake
lib/: CMakeLists.txt  tempmatch.cpp  tempmatch.h
